--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ encoding_rs_io = "0.1.7"
 chrono = "0.4.15"
 currency = "0.4.0"
 num-format = "0.4.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.8.14"
