--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ chrono = "0.4.15"
 num-format = "0.4.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8.14"
+itertools = "0.9.0"
+currency = "0.4.0"
+num = "0.3.1"
